--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Империя Блеска — Профессиональный клининг в Сочи</title>
-    <meta name="description" content="Клининговая компания «Империя Блеска» — профессиональная уборка квартир, домов и офисов в Сочи. 12+ лет опыта, более 13 000 уборок." />
+
+    <meta
+      name="description"
+      content="Клининговая компания «Империя Блеска» — профессиональная уборка квартир, домов и офисов в Сочи. 12+ лет опыта, более 13 000 уборок."
+    />
     <meta name="author" content="Империя Блеска" />
-    <meta name="keywords" content="клининг Сочи, уборка квартир, генеральная уборка, послеремонтная уборка, химчистка мебели" />
+    <meta
+      name="keywords"
+      content="клининг Сочи, уборка квартир, генеральная уборка, послеремонтная уборка, химчистка мебели"
+    />
 
-    <meta property="og:title" content="Империя Блеска — Профессиональный клининг в Сочи" />
-    <meta property="og:description" content="Профессиональная уборка квартир, домов и офисов в Сочи. 12+ лет опыта, более 13 000 уборок." />
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Империя Блеска — Профессиональный клининг в Сочи"
+    />
+    <meta
+      property="og:description"
+      content="Профессиональная уборка квартир, домов и офисов в Сочи. 12+ лет опыта, более 13 000 уборок."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta
+      property="og:url"
+      content="https://radzun9080002222-ship-it.github.io/sparkle-shine-site/"
+    />
+    <meta property="og:image" content="" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@imperiableska" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@imperiabIeska" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
